--- a/doc/7.tex
+++ b/doc/7.tex
@@ -2,7 +2,7 @@
 %!TEX program=xelatex
 
 % packages
-\usepackage[margin=.5in,paperheight=31in,paperwidth=10in]{geometry}
+\usepackage[a4paper,margin=.5in,paperheight=31in]{geometry}
 \usepackage{minted}
 \usepackage{enumitem}
 
