update Programs remove excess variables

--- a/doc/7.tex
+++ b/doc/7.tex
@@ -2,7 +2,8 @@
 %!TEX program=xelatex
 
 % packages
-\usepackage[a4paper,margin=.5in,paperheight=29.5in]{geometry}
+\usepackage{calc}
+\usepackage[a4paper,margin=.5in,paperheight=30in+1em]{geometry}
 \usepackage{minted}
 \usepackage{enumitem}
 
