--- a/doc/5.tex
+++ b/doc/5.tex
@@ -5,9 +5,13 @@
 \usepackage[a4paper,margin=.5in,paperheight=13in]{geometry}
 \usepackage{minted}
 \usepackage{enumitem}
+\usepackage{pagecolor}
 
 % presets
 \pagestyle{empty}
+\pagecolor{black}
+\usemintedstyle{one-dark}
+\color{white}
 
 % commands
 \newcommand{\answer}{\item [$\rightarrow$]}
