--- a/doc/10.tex
+++ b/doc/10.tex
@@ -6,9 +6,13 @@
 \usepackage[a4paper,margin=.5in,paperheight=\paperheight+15.5in]{geometry}
 \usepackage{minted}
 \usepackage{enumitem}
+\usepackage{pagecolor}
 
 % presets
 \pagestyle{empty}
+\pagecolor{black}
+\usemintedstyle{one-dark}
+\color{white}
 
 % commands
 \newcommand{\answer}{\item [$\rightarrow$]}
