--- a/doc/12.tex
+++ b/doc/12.tex
@@ -6,9 +6,14 @@
 \usepackage[a4paper,margin=.5in]{geometry}
 \usepackage{minted}
 \usepackage{enumitem}
+\usepackage{pagecolor}
 
 % presets
 \pagestyle{empty}
+\pagecolor{black}
+\usemintedstyle{one-dark}
+\color{white}
+
 
 % commands
 \newcommand{\answer}{\item [$\rightarrow$]}
