--- a/doc/7.tex
+++ b/doc/7.tex
@@ -6,9 +6,13 @@
 \usepackage[a4paper,margin=.5in,paperheight=30in+1em]{geometry}
 \usepackage{minted}
 \usepackage{enumitem}
+\usepackage{pagecolor}
 
 % presets
 \pagestyle{empty}
+\pagecolor{black}
+\usemintedstyle{one-dark}
+\color{white}
 
 % commands
 \newcommand{\answer}{\item [$\rightarrow$]}
